# ModernCppProjects

./: .gitignore  README.md  Ray_Tracing_38_Test.slnx
LargeLogParser/LargeLogParser/LargeLogParser/: CMakeLists.txt  CreateLargeLogs.cpp  CreateLargeLogs.h  DataStructure.cpp  DataStructure.h  LargeLogParser.vcxproj  LargeLogParser.vcxproj.filters  LogParser.cpp  LogParser.h  LogParserFuture.cpp  LogParserFuture.h  LogParserParallel.h  LogParserParallelFuture.cpp  LogParserParallelFuture.h  LogParserParallelRunner.cpp  LogParserParallelRunner.h  LogParserRunner.cpp  LogParserRunner.h  LogParserThreads.cpp  LogParserThreads.h  README.md  fileProp.h  fileWriter.h  main.cpp  shared.h  test.cpp  test.hpp
LargeLogParser/LargeLogParser/LargeLogParser/Data_NS/: DataStructure.cpp  DataStructure.h
LargeLogParser/LargeLogParser/LargeLogParser/Parser_NS/: LogParser.cpp  LogParser.h  LogParserCreater.h  LogParserCreaterConc.cpp  LogParserCreaterConc.h  LogParserCreaterLazy.cpp  LogParserCreaterLazy.h  LogParserFuture.cpp  LogParserFuture.h  LogParserThreads.cpp  (+1 more)
MandleBrot/MandelBrot/MandelBrot/: CMakeLists.txt  MandelBrot.vcxproj  MandelBrot.vcxproj.filters  README.md  array.cpp  array.h  array_allocator.h  array_c.h  array_c_modern_x_major.cpp  array_c_modern_x_major.h  array_c_modern_y_major.cpp  array_c_modern_y_major.h  array_c_x_major.cpp  array_c_x_major.h  array_c_y_major.cpp  array_c_y_major.h  array_cpp.h  array_cpp_x_major.cpp  array_cpp_x_major.h  array_cpp_y_major.cpp  array_cpp_y_major.h  array_mdspan.h  array_modern.h  cmd_args.h  complex.h  definitions.h  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot_xmesh.cpp  mandelbrot_xmesh.h  mandelbrot_xmesh_innerloop.cpp  mandelbrot_xmesh_innerloop.h  mandelbrot_xmesh_outerloop.cpp  mandelbrot_xmesh_outerloop.h  mandelbrot_ymesh.cpp  mandelbrot_ymesh.h  mandelbrot_ymesh_innerloop.cpp  mandelbrot_ymesh_innerloop.h  mandelbrot_ymesh_outerloop.cpp  (+3 more)
NeuralNetwork/NeuralNetwork/NeuralNetwork/: Activations.cpp  Activations.h  CMakeLists.txt  Dropout.cpp  Dropout.h  Input.cpp  Input.h  InputArgs.cpp  InputArgs.h  InputFile.cpp  InputFile.h  InputMPI.cpp  InputMPI.h  InputMPIFile.cpp  InputMPIFile.h  LastLayerBatchEfficient.cpp  LastLayerBatchEfficient.h  LastLayerBatchEfficientSoftMax.cpp  LastLayerBatchEfficientSoftMax.h  LastLayerEfficient.cpp  LastLayerEfficient.h  Layer.h  LayerBatchEfficient.cpp  LayerBatchEfficient.h  LayerEfficient.cpp  LayerEfficient.h  Logger.h  Loss.cpp  Loss.h  MinMaxScaler.cpp  MinMaxScaler.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  NeuralNetworkMPI.cpp  NeuralNetworkMPI.h  NeuralNetworkOpenMP.cpp  NeuralNetworkOpenMP.h  NeuralNetworkOpenMP2.h  (+9 more)
RayTracer/RayTracer/Ray_Tracing_38/: CMakeLists.txt  Output-P3-Test-1.ppm  Output-P3-Test-2.ppm  Output-P3-Test-3.ppm  Output-P6-Test-1-Parallel.ppm  Output-P6-Test-1.ppm  Output-P6-Test-2-Parallel.ppm  Output-P6-Test-2.ppm  Output-P6-Test-3-Parallel.ppm  RayTracing_21.cpp  Ray_Tracing_38.vcxproj  Ray_Tracing_38.vcxproj.filters  Ray_Tracing_38_Test.vcxproj  Ray_Tracing_38_Test.vcxproj.filters  test.ppm  test.txt  test1.ppm  test2.ppm  test3.ppm  test5.ppm  test8.ppm  test9.ppm  test_1.ppm  ~AutoRecover.Ray_Tracing_38.vcxproj
Ray_Tracing_38/: CMakeLists.txt  Output-P3-Test-2.ppm  README.md  RayTracing_21.cpp  Ray_Tracing_38.vcxproj  Ray_Tracing_38.vcxproj.filters  Ray_Tracing_38_Test.vcxproj  Ray_Tracing_38_Test.vcxproj.filters
Ray_Tracing_38/Algorithms/: bvh.cpp  bvh.h  bvh_triangles.cpp  bvh_triangles.h  camera.cpp  camera.h  communicator.cpp  communicator.h  hit_record.cpp  hittable_list.cpp  hittable_list.h  hittable_list_parallel.cpp  hittable_list_parallel.h  image.cpp  image_async.cpp  image_async.h  mpiComm.cpp  mpiComm.h  path.cpp  path.h  rtw_stb_image.cpp  serialComm.h  simpleComm.cpp  triangle_list.cpp  triangle_list.h
Ray_Tracing_38/Data/: color_array.cpp  color_array.h
Ray_Tracing_38/Geometry/: aabb.cpp  aabb.h  constant_medium.cpp  constant_medium.h  hittable.cpp  hittable.h  interval.cpp  interval.h  mesh.cpp  mesh.h  perlin.cpp  perlin.h  planes.cpp  planes.h  quad.cpp  quad.h  sphere.cpp  sphere.h  texture.cpp  texture.h  triangle_mesh.cpp  triangle_mesh.h
Ray_Tracing_38/Input/: app_settings.h  camera_settings.cpp  camera_settings.h  factory.cpp  factory.hpp  gltf_reader.cpp  gltf_reader.h  image_settings.cpp  input.h  model_reader.cpp  model_reader.h  obj_model_reader.cpp  obj_model_reader.h  obj_model_reader_parallel.cpp  obj_model_reader_parallel.h  output_settings.h  renderer_factory.cpp  renderer_settings.cpp  renderer_settings.h  scene_factory.cpp  scene_factory.hpp  scene_settings.cpp  scene_settings.h  tiny_gltf_v3.h
Ray_Tracing_38/Intel® VTune™ Profiler Results/Ray_Tracing_39/: Ray_Tracing_39.vtuneproj
Ray_Tracing_38/Materials/: PBR.cpp  PBR.h  material.cpp  material.h  material_list.cpp  material_list.h
Ray_Tracing_38/Output/: Logger.cpp  Logger.h  output.h  output_async.h  output_parallel.h  output_serial.cpp  output_serial.h  profiler.h
Ray_Tracing_38/Renderer/: Renderer.h  Renderer_Async.cpp  Renderer_Async.h  Renderer_facade.cpp  Renderer_facade.h
Ray_Tracing_38/Shared/: rtweekend.h
Ray_Tracing_38/Tests/: Ray_Tracing_38_tests.cpp  catch_amalgamated.cpp  test_camera_settings.cpp  test_helpers.h  test_input.cpp  test_matchers.cpp  test_obj_reader.cpp  test_output.cpp  test_render_settings.cpp  test_settings.cpp  test_shared.h  test_triangles.cpp
Ray_Tracing_38/Tests/SampleInputs/: SampleInput-11.txt  SampleInput-12.txt  SampleInput-13.txt  SampleInput-20.txt  SampleInput-22.txt  SampleInput-24.txt  SampleInput-25.txt  SampleInput-26.txt  SampleInput-3.txt  SampleInput-4.txt  SampleInput-5.txt  SampleInput-6.txt  SampleInput-9.txt
Ray_Tracing_38/Tests/SampleOutputs/: test_10.ppm  test_11.ppm  test_13.ppm  test_15.ppm  test_16.ppm  test_17.ppm  test_18.ppm  test_19.ppm  test_2.ppm  test_20.ppm  test_22.ppm  test_23.ppm  test_24.ppm  test_25.ppm  test_26.ppm  test_9.ppm
Ray_Tracing_38/Types/: color.cpp  color.h  point3_animated.h  ray.h  vec3.cpp  vec3.h
(+975 files in other folders)
